# qmp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  MediaApp.cpp  MediaApp.h  VidWidget.cpp  VidWidget.h  main.cpp
src/res/: app_icon.rc  app_icon.xpm  icons.qrc
triplets/: x64-linux-mixed.cmake  x64-windows-mixed.cmake
